--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+  	<nav>
+  		<%= link_to 'Home', root_path %>
+      <%= link_to 'SD', cost_centers_path %>
+  	</nav>
     <%= yield %>
   </body>
 </html>
