--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -26,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Customer po:</strong>
-  <%= @invoice.customer_po %>
+  <strong>Customerpo:</strong>
+  <%= @invoice.customerpo.number %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
