--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -26,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Customer po:</strong>
-  <%= @site.customer_po %>
+  <strong>Customerpo:</strong>
+  <%= @site.customerpo %>
 </p>
 
 <%= link_to 'Edit', edit_site_path(@site) %> |
