--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -10,7 +10,7 @@
       <th>Amount</th>
       <th>Status</th>
       <th>Milestone type</th>
-      <th>Customer po</th>
+      <th>Customerpo</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,7 +23,7 @@
         <td><%= invoice.amount %></td>
         <td><%= invoice.status %></td>
         <td><%= invoice.milestone_type %></td>
-        <td><%= invoice.customer_po %></td>
+        <td><%= invoice.customerpo.number %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
