--- a/app/views/customerquotes/show.html.erb
+++ b/app/views/customerquotes/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Customerpo:</strong>
-  <%= @customerquote.customerpo.number %>
+  <strong>Cost center:</strong>
+  <%= @customerquote.cost_center %>
 </p>
 
 <%= link_to 'Edit', edit_customerquote_path(@customerquote) %> |
