--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,13 +21,13 @@
 </p>
 
 <p>
-  <strong>Milestone type:</strong>
-  <%= @invoice.milestone_type %>
+  <strong>Milestonetype:</strong>
+  <%= @invoice.milestonetype %>
 </p>
 
 <p>
   <strong>Customerpo:</strong>
-  <%= @invoice.customerpo.number %>
+  <%= @invoice.customerpo %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
