--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -22,8 +22,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :tower_height %>
-    <%= f.text_field :tower_height %>
+    <%= f.label :status %>
+    <%= f.text_field :status %>
+  </div>
+
+  <div class="field">
+    <%= f.label :towerheight %>
+    <%= f.number_field :towerheight %>
   </div>
 
   <div class="field">
@@ -32,29 +37,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :status%>
-    We designed this and the scope in reverse
-    <%#= f.collection_select :status_id, Status.all, :id, :state %>
-  </div>
-  <div class="field">
-    <%= f.label :scope%>
-    We designed this and the scope in reverse
-    <%#= f.collection_select :scopes_id, Scope.all, :id, :type %>
+    <%= f.label :town_class %>
+    <%= f.text_field :town_class %>
   </div>
 
-
   <div class="field">
-    <%= f.label :town_classification %>
-    <%= f.text_field :town_classification %>
-  </div>
-
-  <!-- <div class="field">
-    <%#= f.label :customerpo_id %>
-    <%#= f.text_field :customerpo_id %>
-  </div> -->
-  <div class="field">
-    <%= f.label :customer_po%>
-    <%= f.collection_select :customerpo_id, Customerpo.all, :id, :number %>
+    <%= f.label :customerpo_id %>
+    <%= f.text_field :customerpo_id %>
   </div>
 
   <div class="actions">
