--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -7,9 +7,10 @@
     <tr>
       <th>Number</th>
       <th>Name</th>
-      <th>Tower height</th>
+      <th>Status</th>
+      <th>Towerheight</th>
       <th>Town</th>
-      <th>Town classification</th>
+      <th>Town class</th>
       <th>Customerpo</th>
       <th colspan="3"></th>
     </tr>
@@ -20,10 +21,11 @@
       <tr>
         <td><%= site.number %></td>
         <td><%= site.name %></td>
-        <td><%= site.tower_height %></td>
+        <td><%= site.status %></td>
+        <td><%= site.towerheight %></td>
         <td><%= site.town %></td>
-        <td><%= site.town_classification %></td>
-        <td><%= site.customerpo.number %></td>
+        <td><%= site.town_class %></td>
+        <td><%= site.customerpo %></td>
         <td><%= link_to 'Show', site %></td>
         <td><%= link_to 'Edit', edit_site_path(site) %></td>
         <td><%= link_to 'Destroy', site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
