--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -11,8 +11,13 @@
 </p>
 
 <p>
-  <strong>Tower height:</strong>
-  <%= @site.tower_height %>
+  <strong>Status:</strong>
+  <%= @site.status %>
+</p>
+
+<p>
+  <strong>Towerheight:</strong>
+  <%= @site.towerheight %>
 </p>
 
 <p>
@@ -21,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Town classification:</strong>
-  <%= @site.town_classification %>
+  <strong>Town class:</strong>
+  <%= @site.town_class %>
 </p>
 
 <p>
