--- a/app/views/customerpos/_form.html.erb
+++ b/app/views/customerpos/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :date %>
-    <%= f.datetime_select :date %>
+    <%= f.date_select :date %>
   </div>
 
   <div class="field">
@@ -21,14 +21,9 @@
     <%= f.number_field :number %>
   </div>
 
-  <!-- <div class="field">
-    <%#= f.label :cost_center_id %>
-    <%#= f.text_field :cost_center_id %>
-  </div> -->
-
   <div class="field">
-    <%= f.label :cost_center %>
-    <%= f.collection_select :cost_center_id, CostCenter.all, :id, :number %>
+    <%= f.label :customerquote_id %>
+    <%= f.text_field :customerquote_id %>
   </div>
 
   <div class="actions">
