--- a/app/views/customerpos/index.html.erb
+++ b/app/views/customerpos/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Date</th>
       <th>Number</th>
-      <th>Cost center</th>
+      <th>Customerquote</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
       <tr>
         <td><%= customerpo.date %></td>
         <td><%= customerpo.number %></td>
-        <td><%= customerpo.cost_center.number %></td>
+        <td><%= customerpo.customerquote %></td>
         <td><%= link_to 'Show', customerpo %></td>
         <td><%= link_to 'Edit', edit_customerpo_path(customerpo) %></td>
         <td><%= link_to 'Destroy', customerpo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
