--- a/app/views/customerpos/show.html.erb
+++ b/app/views/customerpos/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Customerquote:</strong>
-  <%= @customerpo.customerquote %>
+  <%= @customerpo.customerquote.name %>
 </p>
 
 <%= link_to 'Edit', edit_customerpo_path(@customerpo) %> |
