--- a/app/views/customerpos/_form.html.erb
+++ b/app/views/customerpos/_form.html.erb
@@ -21,9 +21,14 @@
     <%= f.number_field :number %>
   </div>
 
-  <div class="field">
-    <%= f.label :customerquote_id %>
-    <%= f.text_field :customerquote_id %>
+  <!-- <div class="field">
+    <%#= f.label :customerquote_id %>
+    <%#= f.text_field :customerquote_id %>
+  </div> -->
+
+   <div class="field">
+    <%= f.label :customerquote %>
+    <%= f.collection_select :customerquote, Customerquote.all, :id, :name %> 
   </div>
 
   <div class="actions">
