--- a/app/views/customerquotes/show.html.erb
+++ b/app/views/customerquotes/show.html.erb
@@ -1,5 +1,5 @@
-<p id="notice"><%= notice %></p>
-
+<p id="notice"><%= notice%></p>
+<%= link_to 'New Customer PO', new_customerpo_path %>
 <p>
   <strong>Name:</strong>
   <%= @customerquote.name %>
@@ -17,8 +17,15 @@
 
 <p>
   <strong>Cost center:</strong>
-  <%= @customerquote.cost_center %>
+  <%= @customerquote.cost_center.number %>
 </p>
 
 <%= link_to 'Edit', edit_customerquote_path(@customerquote) %> |
 <%= link_to 'Back', customerquotes_path %>
+
+
+<h4> Customer POs</h4>
+<% @customerquote.customerpos.each do |customerpo| %>
+		<%= link_to customerpo.number, customerpo_path %>
+		<%= customerpo.date %><br>
+	<% end %>
