fixd the customer po issue

--- a/app/views/customerpos/_form.html.erb
+++ b/app/views/customerpos/_form.html.erb
@@ -28,7 +28,7 @@
 
    <div class="field">
     <%= f.label :customerquote %>
-    <%= f.collection_select :customerquote, Customerquote.all, :id, :name %> 
+    <%= f.collection_select :customerquote_id, Customerquote.all, :id, :name %> 
   </div>
 
   <div class="actions">
