--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -40,6 +40,10 @@
     <%= f.label :customerpo_id %>
     <%= f.text_field :customerpo_id %>
   </div>
+  <div class="field">
+    <%= f.label :customerpo_id %>
+    <%= f.collection_select :customerpo_id, Customerpo.all, :id, :number %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
