--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= invoice.amount %></td>
         <td><%= invoice.status %></td>
         <td><%= invoice.milestonetype %></td>
-        <td><%= invoice.customerpo %></td>
+        <td><%= invoice.customerpo.number %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
