--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Customerpo:</strong>
-  <%= @invoice.customerpo %>
+  <%= @invoice.customerpo.number %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
