--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Customerpo:</strong>
-  <%= @site.customerpo %>
+  <%= @site.customerpo.number %>
 </p>
 
 <%= link_to 'Edit', edit_site_path(@site) %> |
