--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= site.towerheight %></td>
         <td><%= site.town %></td>
         <td><%= site.town_class %></td>
-        <td><%= site.customerpo %></td>
+        <td><%= site.customerpo.number %></td>
         <td><%= link_to 'Show', site %></td>
         <td><%= link_to 'Edit', edit_site_path(site) %></td>
         <td><%= link_to 'Destroy', site, method: :delete, data: { confirm: 'Are you sure?' } %></td>
