changed table structures from customer PO downwards & added fields & more tables

--- a/app/views/customerpos/index.html.erb
+++ b/app/views/customerpos/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Date</th>
       <th>Number</th>
+      <th>Amount</th>
       <th>Customerquote</th>
       <th colspan="3"></th>
     </tr>
@@ -17,7 +18,8 @@
       <tr>
         <td><%= customerpo.date %></td>
         <td><%= customerpo.number %></td>
-        <td><%= customerpo.customerquote.name %></td>
+        <td><%= customerpo.amount %></td>
+        <td><%= customerpo.customerquote %></td>
         <td><%= link_to 'Show', customerpo %></td>
         <td><%= link_to 'Edit', edit_customerpo_path(customerpo) %></td>
         <td><%= link_to 'Destroy', customerpo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
