--- a/app/views/customerpos/_form.html.erb
+++ b/app/views/customerpos/_form.html.erb
@@ -21,14 +21,14 @@
     <%= f.number_field :number %>
   </div>
 
-  <!-- <div class="field">
-    <%#= f.label :customerquote_id %>
-    <%#= f.text_field :customerquote_id %>
-  </div> -->
+  <div class="field">
+    <%= f.label :amount %>
+    <%= f.number_field :amount %>
+  </div>
 
-   <div class="field">
-    <%= f.label :customerquote %>
-    <%= f.collection_select :customerquote_id, Customerquote.all, :id, :name %> 
+  <div class="field">
+    <%= f.label :customerquote_id %>
+    <%= f.text_field :customerquote_id %>
   </div>
 
   <div class="actions">
