--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -21,14 +21,13 @@
 </p>
 
 <p>
-  <strong>Milestonetype:</strong>
-  <%= @invoice.milestonetype %>
+  <strong>Milestone:</strong>
+  <%= @invoice.milestone %>
 </p>
 
 <p>
   <strong>Customerpo:</strong>
-  <%= link_to @invoice.customerpo.number, customerpo_path(@invoice.customerpo_id) %>
-  <%#= link_to Customerpo.find(@invoice.customerpo_id).number, customerpo_path(@invoice.customerpo_id) %>
+  <%= @invoice.customerpo %>
 </p>
 
 <%= link_to 'Edit', edit_invoice_path(@invoice) %> |
