added links & fields to the tables:

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+/*@import "material";
+@import "material_icons";*/
 @import "font-awesome-sprockets";
 @import "font-awesome";
