--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
           <%= link_to 'Customer Quotes', customerquotes_path %> | 
           <%= link_to 'Customer POs', customerpos_path %> | 
           <%= link_to 'Invoices', invoices_path %> | 
-          <%= link_to 'Sites', sites_path %>
-          <%#= link_to 'Status', statuses_path %>
-          <%#= link_to 'Scopes', scopes_path %>
+          <%= link_to 'Sites', sites_path %> | 
+          <%= link_to 'Status', statuses_path %> | 
+          <%= link_to 'Scopes', scopes_path %> | 
+          <%= link_to 'Towns', towns_path %> | 
+          <%= link_to 'Milerstones', milestones_path %>
         </nav>
         <%= yield %>
       </div>
