--- a/app/views/scopes/show.html.erb
+++ b/app/views/scopes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Type:</strong>
-  <%= @scope.type %>
+  <%= @scope.scope_type %>
 </p>
 
 <%= link_to 'Edit', edit_scope_path(@scope) %> |
