--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -21,9 +21,9 @@
         <td><%= invoice.date %></td>
         <td><%= invoice.number %></td>
         <td><%= invoice.amount %></td>
-        <td><%= invoice.status %></td>
-        <td><%= invoice.milestone %></td>
-        <td><%= invoice.customerpo %></td>
+        <td><%= invoice.status.state %></td>
+        <td><%= invoice.milestone.milestone_type %></td>
+        <td><%= invoice.customerpo.number %></td>
         <td><%= link_to 'Show', invoice %></td>
         <td><%= link_to 'Edit', edit_invoice_path(invoice) %></td>
         <td><%= link_to 'Destroy', invoice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
