--- a/app/views/scopes/_form.html.erb
+++ b/app/views/scopes/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :type %>
-    <%= f.text_field :type %>
+    <%= f.label :scope_type %>
+    <%= f.text_field :scope_type %>
   </div>
 
   <div class="actions">
