--- a/app/views/scopes/index.html.erb
+++ b/app/views/scopes/index.html.erb
@@ -13,7 +13,7 @@
   <tbody>
     <% @scopes.each do |scope| %>
       <tr>
-        <td><%= scope.type %></td>
+        <td><%= scope.scope_type %></td>
         <td><%= link_to 'Show', scope %></td>
         <td><%= link_to 'Edit', edit_scope_path(scope) %></td>
         <td><%= link_to 'Destroy', scope, method: :delete, data: { confirm: 'Are you sure?' } %></td>
